Documentation edits made through Mintlify web editor

--- a/ingestion/python.mdx
+++ b/ingestion/python.mdx
@@ -146,7 +146,7 @@ Brixo.init(
 
 Some attributes apply to the *application runtime* (not a single interaction). These are configured once via `Brixo.init(...)` and automatically apply to all interactions.
 
-### app_name (**required**)
+### `app_name` (**required**)
 
 Name of the agent application
 
