--- a/index.mdx
+++ b/index.mdx
@@ -6,7 +6,7 @@ description: "Brixo turns your agent telemetry into explainable timelines, cost/
 ## Why instrument with Brixo?
 - **Frictionless integration**: send raw OTEL spans or point your OpenAI calls to our proxy.
 - **Readable step timelines**: we infer steps automatically; optionally add semantic spans via Traceloop/OpenLLMetry.
-- **Business‑grade analytics**: tasks, steps, outcomes, sentiment, cost, latency and more. Check out our [Demo Agent Analytics Dashboard](https://www.brixo.com/agentdemo).
+- **Business‑grade analytics**: tasks, steps, outcomes, sentiment, cost, latency and more. Check out our [Demo Agent Analytics Dashboard](https://www.brixo.com/productdemo).
 
 ## Choose your path
 1. **Zero‑code (HTTP)** · Use the **OpenAI Proxy** for files/batches/requests. → [/http/openai-proxy](/http/openai-proxy)
