Documentation edits made through Mintlify web editor

--- a/ingestion/python.mdx
+++ b/ingestion/python.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Python Quickstart — Send Agent Traces to Brixo"
-description: "Python Quickstart — Send Agent Traces to Brixo"
+description: "Python Quickstart"
 ---
 
 **Goal:** In under 10 minutes, send rich agent traces from your Python app to **Brixo** and unlock customer analytics.
@@ -319,7 +319,7 @@ user = {
 }
 ```
 
-- `id` (required): Stable internal identifier for the user 
+- `id` (required): Stable internal identifier for the user
 
   Typically an email address, which can be mapped to a CRM record (e.g. Salesforce) when a connector is enabled.
 - `name` (required): Display name
