Documentation edits made through Mintlify web editor

--- a/ingestion/otlp.mdx
+++ b/ingestion/otlp.mdx
@@ -1,5 +1,5 @@
 ---
-title: "OTLP Quickstart — Send OpenTelemetry Traces to Brixo"
+title: "OTLP Quickstart"
 description: "Stream existing OpenTelemetry traces to Brixo via OTLP, then progressively enrich them to unlock Conversation Analytics."
 ---
 
