Documentation edits made through Mintlify web editor

--- a/ingestion/python.mdx
+++ b/ingestion/python.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Python Quickstart — Send Agent Traces to Brixo"
-description: "Python Quickstart"
+title: "Python Quickstart"
+description: "Python Quickstart — Send Agent Traces to Brixo"
 ---
 
 **Goal:** In under 10 minutes, send rich agent traces from your Python app to **Brixo** and unlock customer analytics.
