Documentation edits made through Mintlify web editor

--- a/ingestion/api.mdx
+++ b/ingestion/api.mdx
@@ -3,7 +3,7 @@ title: "Brixo Conversation Analytics — Quickstart"
 description: "Brixo transforms raw AI conversations into business-ready insights — user goals, topics, friction, sentiment, and resolution outcomes — without requiring heavy agent instrumentation or observability pipelines."
 ---
 
-**Goal:** In under 10 minutes, send rich agent traces from your Python app to **Brixo** and unlock customer analytics.
+**Goal:** In under 10 minutes, send customer \<> agent conversations from your app to **Brixo** and unlock rich customer analytics.
 
 ---
 
@@ -12,14 +12,13 @@ description: "Brixo transforms raw AI conversations into business-ready insights
 1. Create an account @ https://app.brixo.com/sign_up
 1. Grab an API key and add it to your environment
 1. Install the Brixo SDK
-2. Instrument your agent application
-3. Watch traces appear in Brixo's Live View and confirm they look good
+2. Add a few lines of code
+3. Watch customer \<> agent conversations appear in Brixo's Live View and confirm they look good
 
 ---
 
 ## Prerequisites
 
-- Python 3.10+
 - Brixo account + API key
 
 ---
